# mstk

./: .gitignore  .readthedocs.yaml  README.md  conda.yaml  conda_env.yaml  meta.yaml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: publish-anaconda.yaml  python-publish.yml
archive/: README.md
archive/mos2-il/: oplspsffile.py
archive/vis-gk/: vis-gk.py
conda/: meta.yaml
docs/: analyzer.rst  chem.rst  conf.py  environment.yml  examples.rst  forcefield.rst  index.rst  installation.rst  jobmanager.rst  misc.rst  ommhelper.rst  requirements.txt  scheduler.rst  sfe.rst  simsys.rst  simulation.rst  topology.rst  trajectory.rst  wrapper.rst
docs/examples/: alkane.smt  alkane.zff  alkane.zfp  cv.py  export.py  general.rst  hts.rst  npt.py  test.ipynb  type.py
examples/mof-il/: analyze-mof-il.py
examples/mos2-ils/: CLP-define.zft  CLPol-ljscale.inp  (+19 more)
mstk/: __init__.py  errors.py
mstools/: __init__.py  constant.py  errors.py  formula.py  logger.py  panedr.py  tools.py  unit.py  utils.py
scripts/: analyze-capacitance.py  analyze-lc.py  analyze-mof-il.py  analyze-mos2-il.py  analyze-rdf.py  ffconv.py  gen-imgq.py  gen-sim.py  gmx-get-property.py  im21-dca.ini  im2e-dca.ini  im2o-dca.ini  im41-bf4.ini  im4e-dca.ini  im81-dca.ini  imb-dca.ini  imb1-dca.ini  imo1-dca.ini  lmp2pdb.py  lmp2trj.py  lmpplot.py  logplot.py  modify-charge.py  modify-mos2-charge.py  ommplot.py  qsim.py  quick-sim.py  run-fixq.py  run-imgq.py  runner.py  sim-build.py  sim-export.py  topconv.py  trj-trans.py  trjconv.py  wham-pp.py
tests/: test_formula.py
(+458 files in other folders)
