[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mstk"
version = "0.3.24"
authors = [{ name = "Zheng Gong", email = "z.gong@outlook.com" }]
description = "Molecular simulation toolkit"
readme = "README.md"
license = { file = "LICENSE" }  # ensure you have a LICENSE file
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/z-gong/mstk" }

[project.scripts]
mstk = "mstk.cli:main"

[tool.setuptools.package-data]
mstk = ["data/forcefield/*"]
